<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.WelcomeActivity">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_welcome"
            android:text="@string/Welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/image_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@android:color/black"
            android:textSize="35sp"
            android:layout_marginTop="30dp" />


        <Button
            android:id="@+id/button_register"
            android:text="@string/Register"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/text_welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:background="@drawable/button_background"
            android:textColorHint="@color/white"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/button_login"
            android:text="@string/Login"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/button_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:background="@drawable/button_background"
            android:textColorHint="@color/white"
            android:layout_marginTop="20dp" />







</androidx.constraintlayout.widget.ConstraintLayout>
</layout>