<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterActivity">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_register"
        android:layout_width="139dp"
        android:layout_height="49dp"
        android:layout_marginTop="30dp"
        android:text="@string/Register"
        android:textColor="@android:color/black"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view" />


    <EditText
        android:id="@+id/edittext_phoneNumber"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/text_height"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/text_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        android:hint="@string/PhoneNumber"
        android:textColorHint="@color/black"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/text_height"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:hint="@string/Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_phoneNumber" />

    <Button
        android:id="@+id/button_register"
        android:text="@string/Register"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edittext_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:background="@drawable/button_background"
        android:textColorHint="@color/white"
        android:layout_marginTop="20dp" />

    <ProgressBar
        android:id="@+id/progressbar_circular"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>
</layout>