<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center">

            <TextView
                android:id="@+id/text_current_water_level"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/current_water_level"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_water_level"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_current_motor_status"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/current_motor_status"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_motor_status"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_change_motor"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Switch_Motor"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_motor"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>



    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>
</layout>